<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/dialog_save_message"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/filenameEditText" android:hint="file name" android:inputType="textShortMessage|textLongMessage">
        <requestFocus></requestFocus>
    </EditText>
    <RadioGroup android:id="@+id/radioGroup1" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:text="@string/dialog_save_radio_raw" android:id="@+id/rawRadio" android:layout_height="wrap_content" android:checked="true" android:layout_weight="1" android:layout_width="0dp"></RadioButton>
        <RadioButton android:text="@string/dialog_save_radio_wav" android:id="@+id/wavRadio" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dp"></RadioButton>
    </RadioGroup>

</LinearLayout>
